2017-08-24  Bruno Haible  <bruno@clisp.org>

	Support for Linux/arm64.
	* makemake.in (XCFLAGS): Add '-fPIC' on ARM64.
	* lispbibl.d (MALLOC_ADDRESS_RANGE) [UNIX_LINUX && ARM64]: Redefine,
	to work around deficiency of the configure test.
	(oint_type_*, oint_addr_*, oint_data_*) [UNIX_LINUX && ARM64]: Define
	parameterization of TYPECODES configuration.
	(varobject_alignment): Define to 8 on ARM64.
	* spvw.d (init_memory): Hardcode some good heap limits for the
	TRIVIALMAP_MEMORY model on Linux/arm64.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Support 64-bit platforms with MMAP_FIXED_ADDRESS_HIGHEST_BIT <= 38.
	On 64-bit platforms with an mmapable address range of at most 39 bits,
	aint and saint were defined to 32-bit integer types, which is
	catastrophic for SINGLEMAP_MEMORY support.
	* lispbibl.d (aint, saint): Define to 64-bit integer types in this case.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Avoid unwarranted warnings from gcc's -Wformat-security.
	Reported by Jerry James in
	<https://sourceforge.net/p/clisp/mailman/message/36008037/>.
	* lispbibl.d (gettext, clgettext, clgettextl): Declare with GCC
	attribute format_arg.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	For stdio to stdout/stderr, avoid use of fputs and puts.
	* lispbibl.d (fprint, print): New macros.
	* lispbibl.d, avl.d, encoding.d, error.d, errunix.d, errwin32.d:
	* eval.d, genclisph.d, io.d, lightning.c, spvw.d:
	* spvw_alloca.d, spvw_allocate.d, spvw_allocate_old.d, spvw_debug.d:
	* spvw_fault.d, spvw_fault_old.d, spvw_garcol.d, spvw_garcol_old.d:
	* spvw_global.d, spvw_memfile.d, spvw_mmap.d, spvw_sigint.d:
	* spvw_sigsegv.d, win32aux.d:
	Replace most uses of fputs, puts, fputc, putc by uses of macros 'print'
	and 'fprint'.
	* floatparam.c (print): New macro. Use it instead of puts.
	* intparam.c (print): New macro. Use it instead of puts.
	(print_underscored): Renamed from printf_underscored.

2017-08-23  Sam Steingold  <sds@gnu.org>
