@@ -1,5 +1,15 @@
 2017-08-24  Bruno Haible  <bruno@clisp.org>
 
+	Support for Linux/powerpc64.
+	* lispbibl.d (oint_type_*, oint_addr_*, oint_data_*)
+	[UNIX_LINUX && POWERPC64]: Define parameterization of TYPECODES
+	configuration.
+	(mtypecode): Define also for oint_type_len==8 on 64-bit machines.
+	* spvw.d (init_memory): Hardcode some good heap limits for the
+	TRIVIALMAP_MEMORY model on Linux/powerpc64.
+
+2017-08-24  Bruno Haible  <bruno@clisp.org>
+
 	Support for Linux/arm64.
 	* makemake.in (XCFLAGS): Add '-fPIC' on ARM64.
 	* lispbibl.d (MALLOC_ADDRESS_RANGE) [UNIX_LINUX && ARM64]: Redefine,
